Add match creation API
